# dir-merge

./: main.py  pyproject.toml
dir_merge/: cli.py
test/source/: file1.txt  file2.txt
